--- a/ISC20_Frankfurt.tex
+++ b/ISC20_Frankfurt.tex
@@ -1,4 +1,4 @@
-%% This is main file for Computer Architecture for the tutorial in Frankfuret
+%% This is main file for Computer Architecture for the tutorial in Frankfurt
     \input{src/Defines}	%% Define title, language, format, etc.
     \input{Main.tex}    %% The real main file
 
