--- a/src/LessonB3.tex
+++ b/src/LessonB3.tex
@@ -1,6 +1,6 @@
 %%% This is the ISC-2020 Frankfurt 2nd tutorial, B3
 
-\MEchapter[Benchmarking]{Benchmarking performance of supercomputing}
+\MEchapter[Benchmarking]{B3: Benchmarking performance of supercomputing}
 \MESetListingFormat[basicstyle={\ttfamily\color{black}\normalsize}]{SystemC}
 
 
@@ -15,7 +15,7 @@
 %(including GPGPU acceleration, half precision, OpenCAPI bus and interconnection quality) are demonstrated. 
 
 \articleonly{The most obvious 
-field to apply our model to is supercomputers. 
+field to apply our model to is supercomputing. 
 Here the number of processors is extremely high and 
 -- as will be demonstrated -- all contributions to $(1-\alpha_{eff})$
 have been greatly reduced during their very well documented history spanning a quarter of century~\cite{Top500:2016}. Our model is flexible enough to
@@ -200,7 +200,7 @@ the efficiency will be better by a factor of 2-3.
 
 \ao{
 Similarly, exchanging data directly between the processing units~\cite{CooperativeComputing2015} (without using the global memory)
-also enhances $\alpha$ (and payload performance)~\cite{TaihulightHPCG:2018},
+also enhances $(1-\alpha)$ (and payload performance)~\cite{TaihulightHPCG:2018},
 but it represents a (slightly) different computing paradigm.
 Only the two mentioned measured data fall below
 the limiting line of $(1-\alpha)$ in Fig.~\ref{fig:InterconnectionVsPerformance}.B. %\ref{fig:compareTheoryMeas}.
@@ -233,7 +233,7 @@ using 64-bit (FP64) operands. Given that the measured payload performance direct
 one can assume that the contributions of the two calculations 
 plus the rest of the contributions define the $\alpha$ values}
 we can conclude from the measurements
-that for supercomputer Summit:
+for supercomputer Summit:
 
 $1-\alpha_{HPL}^{FP0}-\alpha_{HPL}^{FP64} = 1.465*10^{-7}$
 
@@ -252,7 +252,7 @@ $\alpha_{HPL}^{FP64} = 1.3*10^{-7}$
 $\alpha_{HPCG}^{FP64} = 208*10^{-7}$
 
 \ao{These data directly underpin that the technology is (almost) perfect:}
-the contribution from the benchmark calculation$\alpha_{HPCG}^{FP64}$
+the contribution from the benchmark calculation $\alpha_{HPCG}^{FP64}$
 is orders of magnitude larger than the contribution from all the rests.
 \ao{Recalling that the benchmark program imitates the behavior (as defined
 by the resulting $\alpha$) of real-life programs, one can see that} 
@@ -326,7 +326,7 @@ the computing units, the nonlinearity of the scaling becomes more and more obvio
 }
 
 \subsection{Supercomputer efficiency in terms of AI}
-MEframe[shrink]{The communication in the AI multi-layer structure}
+\MEframe[shrink]{The communication in the AI multi-layer structure}
 {
 	\MEfigure{fig/AImultilayer.pdf}
 {The communication density of the AI workload}
